<resources>
    <string name="app_name">ProjectPTUD</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_to_your_dream_t">To your dream trip</string>
    <string name="msg_didn_t_receive">Didn\u2019t receive any code? </string>
    <string name="msg_reach_the_unkno">Reach the unknown spot</string>
    <string name="msg_already_a_membe2">Already a member?</string>
    <string name="msg_please_enter_th">Please enter the 6-digit code sent to your
email hemmyhtec@gmail.com for verification.</string>
    <string name="lbl_next">Sign in</string>
    <string name="lbl_Register">Register</string>
    <string name="msg_forget_password">Forget password ?</string>
    <string name="msg_explore_the_wo">Explore the
world easily</string>
    <string name="lbl_strong_password">Strong Password</string>
    <string name="msg_sign_in_to_acce">Sign in to access your account</string>
    <string name="lbl_register_now">Register now</string>
    <string name="msg_by_checking_the">By checking the box you agree to our Terms and Conditions.</string>
    <string name="msg_for_verificatio"> for verification.</string>
    <string name="msg_by_creating_a_f">by creating a free account.</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_welcome_to_home">Welcome To Home</string>
    <string name="msg_please_enter_th2">Please enter the 6-digit code sent to your
email </string>
    <string name="lbl_verify">VERIFY</string>
    <string name="lbl_to_your_desire">To your desire</string>
    <string name="msg_new_member_reg">New Member? Register now</string>
    <string name="lbl_valid_email">Valid email</string>
    <string name="lbl_almost_there">Almost there </string>
    <string name="msg_to_your_destina">To your destination</string>
    <string name="lbl_welcome_back">Welcome back</string>
    <string name="msg_enter_your_emai">Enter your email</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="msg_already_a_membe">Already a member? Log In</string>
    <string name="msg_currently_the_n">Currently The Next Part of Home Activity &amp; Fragementation is under development. The upcoming Part 2 is coming Soon........</string>
    <string name="msg_hemmyhtec_gmail">hemmyhtec@gmail.com</string>
    <string name="msg_6_9">6          9          7           5         4          9         </string>
    <string name="msg_make_connects_w">Make connects with explora</string>
    <string name="lbl_new_member">New Member?</string>
    <string name="lbl_explora">Explora</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_accept">I accept Terms and Conditions</string>
    <string name="lbl_full_name">Full name</string>
    <string name="msg_request_new_cod">Request new code in 00:30s</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>