<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModelLogin.LoginActivity">
    <LinearLayout android:id="@+id/linearCreateAccount"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">

        <FrameLayout
            android:id="@+id/frameStackundrawadventur"
            android:layout_width="@dimen/_210pxh"
            android:layout_height="182dp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_marginEnd="@dimen/_52pxh">

            <ImageView
                android:id="@+id/imageUndrawadventur"
                android:layout_width="215dp"
                android:layout_height="191dp"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/_10pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_undrawadventur"
                />

            <TextView
                android:id="@+id/txtWelcomeback"
                style="@style/txtMontserratmedium24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginBottom="@dimen/_4pxv"
                android:ellipsize="end"
                android:gravity="top|start"
                android:singleLine="true"
                android:text="@string/lbl_welcome_back" />
        </FrameLayout>

        <TextView
            android:id="@+id/txtSignintoacce"
            style="@style/txtMontserratlight14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/msg_sign_in_to_acce" />

        <EditText
            android:id="@+id/edtUsername"
            android:background="@drawable/rectangle_bg_gray_400_33_radius_10"
            android:drawableEnd="@drawable/img_user"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="Username"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_21pxh"
            android:paddingStart="@dimen/_22pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:id="@+id/edtPassword"
            android:background="@drawable/rectangle_bg_gray_400_33_radius_10"
            android:drawableEnd="@drawable/img_lock"
            android:drawablePadding="@dimen/_30pxh"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_21pxh"
            android:paddingStart="@dimen/_22pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowrememberme"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:buttonTint="@color/bluegray_100"
                android:ellipsize="end" android:fontFamily="@font/arial"
                android:id="@+id/checkBoxRememberme"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.8" android:layout_width="0dp"
                android:paddingBottom="@dimen/_1pxv"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@string/lbl_remember_me"
                android:textColor="@color/gray_900"
                android:textFontWeight="400"
                android:textSize="@dimen/_9pxh" android:textStyle="bold" tools:text="@string/lbl_remember_me"
                />
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgetpassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.5" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_forget_password"
                style="@style/txtArialmt9"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearSignIn"
            style="@style/groupStyleindigo_A200cornerRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_70pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSignIn"
                style="@style/txtMontserratromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_120pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_marginBottom="@dimen/_11pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_next" />

            <ImageView
                android:id="@+id/imageArrowright"
                android:layout_width="@dimen/_6pxh"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_109pxh"
                android:layout_marginBottom="@dimen/_17pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_arrowright" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerNotAcount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_90pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNotMember"
                style="@style/txtMontserratmedium13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:singleLine="true"
                android:text="Not a member? " />

            <TextView
                android:id="@+id/txtSignUpNow"
                style="@style/txtMontserratmedium13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/indigo_A200"
                android:text="Sign up now" />
        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:id="@+id/imgChanged"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="685dp"
        android:layout_marginLeft="350dp"
        app:srcCompat="@drawable/usa_icon" />
</RelativeLayout>
